--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -1,116 +1,124 @@
 <mat-card>
     <mat-card-content>
-        <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource">
-                <!-- Key Column -->
-                <ng-container matColumnDef="key">
-                    <th mat-header-cell *matHeaderCellDef>Key</th>
-                    <td mat-cell *matCellDef="let element">{{element.label}}</td>
-                </ng-container>
+        <table class="mat-elevation-z8" mat-table [dataSource]="dataSource">
+            <!-- Key Column -->
+            <ng-container matColumnDef="key">
+                <th mat-header-cell *matHeaderCellDef>Key</th>
+                <td mat-cell *matCellDef="let element">{{element.label}}</td>
+            </ng-container>
 
-                <!-- Value Column -->
-                <ng-container matColumnDef="value">
-                    <th mat-header-cell *matHeaderCellDef>Value</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="flex justify-between" [ngSwitch]="element.key">
-                            {{element.value}}
-                            <button mat-raised-button *ngSwitchCase="'requestId'">Go to QA Report</button>
-                            <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
-                            <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
-                            <button mat-raised-button *ngSwitchCase="'sourceFilePath'"
-                                    (click)="openSourceDataFileModal()">
-                                View Source Data Files
-                            </button>
-                            <ng-container *ngSwitchDefault></ng-container>
+            <!-- Value Column -->
+            <ng-container matColumnDef="value">
+                <th mat-header-cell *matHeaderCellDef>Value</th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="flex justify-between" [ngSwitch]="element.key">
+                        {{element.value}}
+                        <button mat-raised-button *ngSwitchCase="'requestId'">Go to QA Report</button>
+                        <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
+                        <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
+                        <button mat-raised-button *ngSwitchCase="'sourceFilePath'"
+                                (click)="openSourceDataFileModal()">
+                            View Source Data Files
+                        </button>
+                        <ng-container *ngSwitchDefault></ng-container>
+                    </div>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <tr *matNoDataRow>
+                <td class="mat-cell" colspan="9">
+                    No results found.
+                </td>
+            </tr>
+        </table>
+        <table class="mat-elevation-z8" mat-table [dataSource]="qaActivityHistory()" multiTemplateDataRows>
+            <caption>Activity History</caption>
+            <ng-container matColumnDef="sequence">
+                <th mat-header-cell *matHeaderCellDef> Sequence</th>
+                <td mat-cell *matCellDef="let i = dataIndex"> {{i}} </td>
+            </ng-container>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action</th>
+                <td mat-cell *matCellDef="let element"> {{element.action}} </td>
+            </ng-container>
+            <ng-container matColumnDef="updatedTime">
+                <th mat-header-cell *matHeaderCellDef> Updated Time</th>
+                <td mat-cell *matCellDef="let element"> {{element.updatedTime}} </td>
+            </ng-container>
+            <ng-container matColumnDef="nbNotes">
+                <th mat-header-cell *matHeaderCellDef> # of Notes</th>
+                <td mat-cell *matCellDef="let element"> {{element.notes.length}}
+                    <button mat-flat-button aria-label="expand row" color="primary">
+                        <ng-container *ngIf="expandedActivity === element; else expandTemplate">
+                            <mat-icon fontIcon="keyboard_arrow_up"></mat-icon>
+                        </ng-container>
+                        <ng-template #expandTemplate>
+                            <mat-icon fontIcon="keyboard_arrow_down"></mat-icon>
+                        </ng-template>
+                    </button>
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="qaActivityColumns"></tr>
+            <tr>
+                <td>Current</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"
+                [class.example-expanded-row]="expandedActivity === row"
+                (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+            <tr *matNoDataRow>
+                <td class="mat-cell" colspan="9">
+                    No results found.
+                </td>
+            </tr>
+
+            <ng-container matColumnDef="expandedDetail">
+                <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
+                    <div class="example-element-detail"
+                         [@detailExpand]="row === expandedActivity ? 'expanded' : 'collapsed'">
+                        <div class="m-2 w-full">
+                            <table class="mat-elevation-z8" mat-table [dataSource]="row.notes">
+                                <caption>Notes</caption>
+                                <ng-container matColumnDef="tags">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
+                                    <td mat-cell *matCellDef="let noteRow">TODO: What Goes Here?</td>
+                                </ng-container>
+                                <ng-container matColumnDef="notes">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Notes</th>
+                                    <td mat-cell *matCellDef="let noteRow">{{noteRow.notes}}</td>
+                                </ng-container>
+                                <ng-container matColumnDef="createdBy">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created By
+                                    </th>
+                                    <td mat-cell *matCellDef="let noteRow">{{noteRow.createdBy}}</td>
+                                </ng-container>
+                                <ng-container matColumnDef="createdTime">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created
+                                        Time
+                                    </th>
+                                    <td mat-cell
+                                        *matCellDef="let noteRow">{{noteRow.createdTime || row.updatedTime}}</td>
+                                </ng-container>
+                                <ng-container matColumnDef="action">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Action</th>
+                                    <td mat-cell *matCellDef="let noteRow">TODO: View</td>
+                                </ng-container>
+                                <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
+                                <tr mat-row *matRowDef="let noteRow; columns: notesColumns"></tr>
+                            </table>
                         </div>
-                    </td>
-                </ng-container>
+                    </div>
+                </td>
+            </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-                <tr *matNoDataRow>
-                    <td class="mat-cell" colspan="9">
-                        No results found.
-                    </td>
-                </tr>
-            </table>
-            <table mat-table [dataSource]="qaActivityHistory()" multiTemplateDataRows>
-                <caption>Activity History</caption>
-                <ng-container matColumnDef="sequence">
-                    <th mat-header-cell *matHeaderCellDef> Sequence</th>
-                    <td mat-cell *matCellDef="let i = dataIndex"> {{i}} </td>
-                </ng-container>
-                <ng-container matColumnDef="action">
-                    <th mat-header-cell *matHeaderCellDef> Action</th>
-                    <td mat-cell *matCellDef="let element"> {{element.action}} </td>
-                </ng-container>
-                <ng-container matColumnDef="updatedTime">
-                    <th mat-header-cell *matHeaderCellDef> Updated Time</th>
-                    <td mat-cell *matCellDef="let element"> {{element.updatedTime}} </td>
-                </ng-container>
-                <ng-container matColumnDef="nbNotes">
-                    <th mat-header-cell *matHeaderCellDef> # of Notes</th>
-                    <td mat-cell *matCellDef="let element"> {{element.notes.length}} </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="qaActivityColumns"></tr>
-                <tr>
-                    <td>Current</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"
-                    [class.example-expanded-row]="expandedActivity === row"
-                    (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
-                <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-
-                <tr *matNoDataRow>
-                    <td class="mat-cell" colspan="9">
-                        No results found.
-                    </td>
-                </tr>
-
-                <ng-container matColumnDef="expandedDetail">
-                    <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
-                        <div class="example-element-detail"
-                             [@detailExpand]="row === expandedActivity ? 'expanded' : 'collapsed'">
-                            <div class="w-full">
-                                <table mat-table [dataSource]="row.notes">
-                                    <ng-container matColumnDef="tags">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Tags</th>
-                                        <td mat-cell *matCellDef="let noteRow">TODO: What Goes Here?</td>
-                                    </ng-container>
-                                    <ng-container matColumnDef="notes">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Notes</th>
-                                        <td mat-cell *matCellDef="let noteRow">{{noteRow.notes}}</td>
-                                    </ng-container>
-                                    <ng-container matColumnDef="createdBy">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created By
-                                        </th>
-                                        <td mat-cell *matCellDef="let noteRow">{{noteRow.createdBy}}</td>
-                                    </ng-container>
-                                    <ng-container matColumnDef="createdTime">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Created
-                                            Time
-                                        </th>
-                                        <td mat-cell
-                                            *matCellDef="let noteRow">{{noteRow.createdTime || row.updatedTime}}</td>
-                                    </ng-container>
-                                    <ng-container matColumnDef="action">
-                                        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Action</th>
-                                        <td mat-cell *matCellDef="let noteRow">TODO: View</td>
-                                    </ng-container>
-                                    <tr mat-header-row *matHeaderRowDef="notesColumns"></tr>
-                                    <tr mat-row *matRowDef="let noteRow; columns: notesColumns"></tr>
-                                </table>
-                            </div>
-                        </div>
-                    </td>
-                </ng-container>
-
-            </table>
-        </div>
+        </table>
     </mat-card-content>
     <mat-card-actions>
         <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
