--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -128,21 +128,6 @@
           <td mat-cell *matCellDef="let row">{{row.requestTime}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="expand">
-          <th mat-header-cell *matHeaderCellDef aria-label="row actions">Request Activity Detail</th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-flat-button aria-label="expand row" color="primary"
-                    (click)="fetchLoadRequestActivity($event,element)">
-              <ng-container *ngIf="expandedElement === element; else expandTemplate">
-                <mat-icon fontIcon="keyboard_arrow_up"></mat-icon>
-              </ng-container>
-              <ng-template #expandTemplate>
-                <mat-icon fontIcon="keyboard_arrow_down"></mat-icon>
-              </ng-template>
-            </button>
-          </td>
-        </ng-container>
-
         <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
@@ -159,7 +144,8 @@
 
         <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
             class="example-element-row"
-            [class.example-expanded-row]="expandedElement === row">
+            [class.example-expanded-row]="expandedElement === row"
+            (click)="fetchLoadRequestActivity($event,row)">
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
