--- a/projects/ts-etl-ui/src/manage/manage.component.html
+++ b/projects/ts-etl-ui/src/manage/manage.component.html
@@ -1,14 +1,11 @@
-  <div class="example-sidenav-content mx-5">
-      <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start"
-                     fitInkBarToContent>
-        <mat-tab label="Load Request" #tab1>
-          <app-load-request *ngIf="tab1.isActive"></app-load-request>
-        </mat-tab>
-        <mat-tab label="Version QA" #tab2>
-          <app-version-qa *ngIf="tab2.isActive"></app-version-qa>
-        </mat-tab>
-        <mat-tab label="Code System" #tab3>
-          <app-code-system *ngIf="tab3.isActive"></app-code-system>
-        </mat-tab>
-      </mat-tab-group>
-  </div>
+<div class="example-sidenav-content mx-5">
+  <nav mat-tab-nav-bar [tabPanel]="tabPanel" mat-stretch-tabs="false">
+    <ng-container *ngFor="let tab of navigationService.tabs">
+      <a mat-tab-link [routerLink]="tab.route"
+         [active]="tab.isActive">{{tab.label}} </a>
+    </ng-container>
+  </nav>
+  <mat-tab-nav-panel #tabPanel>
+    <router-outlet></router-outlet>
+  </mat-tab-nav-panel>
+</div>
