--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -10,7 +10,9 @@
 
       <ng-container matColumnDef="loadNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Load Number</th>
-        <td mat-cell *matCellDef="let row" (click)="expandedElement = expandedElement === row ? null : row"><a href="#">{{row.loadNumber}}</a></td>
+        <td mat-cell *matCellDef="let row" (click)="expandedElement = expandedElement === row ? null : row">
+          <span class="fake-link">{{row.loadNumber}}</span>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="codeSystemName">
@@ -56,17 +58,20 @@
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedDetail">
         <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
-          <div class="" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'"  *ngIf="expandedElement === row">
+          <div class="" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'"
+               *ngIf="expandedElement === row">
             <div class="flex">
               <div class="m-2" style="flex-grow:0.35">
                 <app-version-qa-detail [versionQA]="row" class="flex flex-grow"></app-version-qa-detail>
               </div>
-              <div class="m-2" style="flex-grow:0.65;background-color:#0dbc79">Load Summary and QA Actions go here!</div>
+              <div class="m-2" style="flex-grow:0.65;background-color:#0dbc79">Load Summary and QA Actions go here!
+              </div>
             </div>
             <div class="flex" style="flex-grow:1">
               <fieldset>
                 <legend>QA Acceptance</legend>
-                <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"  class="flex flex-grow"></app-version-qa-activity>
+                <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"
+                                         class="flex flex-grow"></app-version-qa-activity>
               </fieldset>
             </div>
           </div>
@@ -76,7 +81,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement === row"
-          >
+      >
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
