--- a/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
+++ b/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
@@ -1,8 +1,8 @@
 <div class="mat-elevation-z8 my-5">
 
   <fieldset>
-    <legend>QA Activites</legend>
-    <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+    <legend>QA Activities</legend>
+    <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource()" matSort multiTemplateDataRows>
       <caption>Activity History</caption>
 
       <ng-container matColumnDef="id">
@@ -45,6 +45,12 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="9">
+          No activities found.
+        </td>
+      </tr>
+
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement === row"
@@ -54,9 +60,5 @@
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
     </table>
-
   </fieldset>
-
-  <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
-  <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
 </div>
