--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -30,15 +30,12 @@
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label for="sourcePathFile">Source File Path</mat-label>
-        <input matInput formControlName="sourceFilePath" class="hidden">
+        <input matInput formControlName="sourceFilePath">
+        <mat-icon matSuffix (click)="fileUpload.click()" color="primary">attach_file</mat-icon>
         <input type="file" #fileUpload class="hidden" (change)="onFileSelected($event)" id="sourcePathFile">
-        <div class="file-upload">
-          {{loadRequestCreationForm.get('sourceFilePath')?.value || "No file selected yet."}}
-          <button mat-mini-fab color="primary" class="upload-btn float-right" type="button"
-                  (click)="fileUpload.click()">
-            <mat-icon>attach_file</mat-icon>
-          </button>
-        </div>
+        <mat-error *ngIf="loadRequestCreationForm.get('sourceFilePath')?.hasError('sourceFilePathError')">
+          Please select source file from NLM server
+        </mat-error>
       </mat-form-field>
       <div class="mb-5">
         <label id="load-request-type-label" for="load-request-type-radio">Request Type</label>
