--- a/projects/ts-etl-ui/src/load-summary/load-summary.component.html
+++ b/projects/ts-etl-ui/src/load-summary/load-summary.component.html
@@ -3,27 +3,27 @@
   <legend>Load Components</legend>
   <table id="loadComponentsTable" class="mat-elevation-z8 my-3" mat-table [dataSource]="loadSummary.components" matSort>
     <ng-container matColumnDef="componentName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Component Name</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>Component Name</th>
       <td mat-cell *matCellDef="let element">{{element.componentName}}</td>
     </ng-container>
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Status</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>Status</th>
       <td mat-cell *matCellDef="let element">{{element.status}}</td>
     </ng-container>
     <ng-container matColumnDef="startTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Start Time</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>Start Time</th>
       <td mat-cell *matCellDef="let element">{{element.startTime}}</td>
     </ng-container>
     <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Duration</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>Duration</th>
       <td mat-cell *matCellDef="let element">{{element.duration | durationFormat }}</td>
     </ng-container>
     <ng-container matColumnDef="error">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>error</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>error</th>
       <td mat-cell *matCellDef="let element">{{element.errors.length}}</td>
     </ng-container>
     <ng-container matColumnDef="warning">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>warning</th>
+      <th mat-header-cell *matHeaderCellDef disableClear>warning</th>
       <td mat-cell *matCellDef="let element">{{element.warnings.length}}</td>
     </ng-container>
     <ng-container matColumnDef="info">
@@ -34,3 +34,5 @@
     <tr mat-row *matRowDef="let element; columns: summaryColumns"></tr>
   </table>
 </fieldset>
+
+<app-version-qa-rules [qaRules]="loadSummary.qaRules"></app-version-qa-rules>
