--- a/projects/ts-etl-ui/src/material-theme.scss
+++ b/projects/ts-etl-ui/src/material-theme.scss
@@ -8,13 +8,18 @@ $my-primary: mat.define-palette(mat.$indigo-palette, 500);
 $my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 $my-theme: mat.define-light-theme((
-  color: (
-    primary: $my-primary,
-    accent: $my-accent,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0,
+        color: (
+                primary: $my-primary,
+                accent: $my-accent,
+        ),
+        typography: mat.define-typography-config(),
+        density: 0,
 ));
+
+.my-expanded-table {
+  // it seems -4 is the lowest value
+  @include mat.table-density(-4);
+}
 
 @include mat.all-component-themes($my-theme);
 @include mat.strong-focus-indicators-theme(blue);
